correct hamburger menu not toggling on mobile view

--- a/css/small.css
+++ b/css/small.css
@@ -73,14 +73,6 @@ nav ul li a:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-nav ul.open {
-  display: block;
-}
-
-nav ul {
-  display: none;
-}
-
 /* fixed nav */
 .fixed-nav {
   position: fixed;
@@ -145,16 +137,6 @@ header h2 {
   margin: auto;
 }
 
-footer {
-  background-color: #9b87b8;
-  font-size: 1.2rem;
-}
-
-footer h2 {
-  font-style: italic;
-  text-transform: uppercase;
-  margin: 1rem 0 0.3rem 0;
-}
 main img {
   width: 100%;
   height: auto;
@@ -247,32 +229,7 @@ span.label {
   font-weight: normal;
 }
 
-/*
-.innerCircle,
-.outerCircle {
-  border: 0.5px solid #c6c8d3;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-}
-
-.outerCircle {
-  width: 17px;
-  height: 17px;
-  display: grid;
-  place-items: center;
-}
-
-.bg-pink2 {
-  background-color: #e78da9;
-}
-
-.bg-gr2 {
-  background-color: #f2f4f7;
-}
-
-*/
-.hr-line3 {
+*/ .hr-line3 {
   border: 5px solid #155d99;
   position: absolute;
   width: 100%;
